--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-confirm-alert": "^2.7.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-data-table-component": "^7.5.2",
@@ -51,6 +51,7 @@
     "react-inlinesvg": "^2.3.0",
     "react-intl": "^5.20.4",
     "react-is": "^17.0.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
