--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.4.0",
     "react-share": "^4.4.0",
     "react-topbar-progress-indicator": "^4.1.0",
     "redux": "^4.1.0",
