--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3011
 REACT_APP_BASE_LAYOUT_CONFIG_KEY='metronic-react-demo100'
-REACT_APP_API_URL=http://api.bat-ami.org.il/Batami.webapitest
+REACT_APP_API_URL=https://api.bat-ami.org.il/Batami.webapitest
 REACT_APP_VERSION=v8.0.36
 REACT_APP_THEME_NAME=Metornic
 REACT_APP_THEME_DEMO=demo1
@@ -11,4 +11,4 @@ REACT_APP_PURCHASE_URL=https://themeforest.net/item/metronic-responsive-admin-da
 REACT_APP_PREVIEW_URL=https://preview.keenthemes.com/metronic8/react/demo1/
 REACT_APP_PREVIEW_REACT_URL=https://preview.keenthemes.com/metronic8/react
 REACT_APP_PREVIEW_DOCS_URL=https://preview.keenthemes.com/metronic8/react/demo1-docs
-REACT_APP_API_URL_BACKEND_LOCAL=http://api.bat-ami.org.il/Batami.webapitest
+REACT_APP_API_URL_BACKEND_LOCAL=https://api.bat-ami.org.il/Batami.webapitest
