--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@types/bootstrap": "^5.0.16",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "backblaze-b2": "^1.7.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.7.2",
     "chart.js": "^3.3.2",
     "clsx": "^1.1.1",
@@ -37,6 +37,7 @@
     "nouislider": "^15.2.0",
     "object-path": "^0.11.5",
     "path": "^0.12.7",
+    "postcss-custom-properties": "^12.1.8",
     "prettier": "^2.3.2",
     "prism-react-renderer": "^1.2.1",
     "prism-themes": "^1.7.0",
@@ -62,7 +63,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "rtlcss-webpack-plugin": "^4.0.6",
-    "sass": "1.32.1",
+    "sass": "^1.54.4",
     "socicon": "^3.0.5",
     "styled-components": "^5.3.5",
     "typescript": "^4.1.2",
@@ -96,6 +97,9 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "@types/backblaze-b2": "^1.5.1",
     "@types/chart.js": "2.9.32",
@@ -109,6 +113,11 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.1.8"
   },
   "eslintIgnore": [
     "dist/*"
