--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "17.0.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "axios-mock-adapter": "^1.19.0",
     "backblaze-b2": "^1.7.0",
     "bootstrap": "^5.2.0",
@@ -34,10 +34,11 @@
     "lint-staged": "^11.0.0",
     "mini-css-extract-plugin": "1.6.2",
     "moment": "^2.29.3",
+    "node-sass": "^7.0.1",
     "nouislider": "^15.2.0",
     "object-path": "^0.11.5",
     "path": "^0.12.7",
-    "postcss-custom-properties": "^12.1.8",
+    "postcss-custom-properties": "^10.0.0",
     "prettier": "^2.3.2",
     "prism-react-renderer": "^1.2.1",
     "prism-themes": "^1.7.0",
@@ -59,7 +60,7 @@
     "react-select": "^5.4.0",
     "react-share": "^4.4.0",
     "react-topbar-progress-indicator": "^4.1.0",
-    "redux": "^4.1.0",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "rtlcss-webpack-plugin": "^4.0.6",
@@ -117,7 +118,7 @@
   "resolutions": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
-    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.1.8"
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^10.0.0"
   },
   "eslintIgnore": [
     "dist/*"
