--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "17.0.2",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "17.0.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.1",
@@ -49,6 +50,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-copy-to-clipboard": "^5.0.3",
     "react-data-table-component": "^7.5.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-inlinesvg": "^2.3.0",
     "react-intl": "^5.20.4",
